--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ and my department is Computational Intelligence. I'll be graduating from VIT Uni
 <h2 id="contact-me">Contact Me</h2>
 
 <ul>
-  <li>You can reach me at <a href="Gmail:sanaraviteja10@gmail.com">sanaraviteja10@gmail.com</a>.</li>
+  <li>You can reach me at <a href="gmail:sanaraviteja10@gmail.com">sanaraviteja10@gmail.com</a>.</li>
 </ul>
 
 <h2 id="links">Links</h2>
