--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="header">
-          <h1 class="profile-name">Raviteja sana</h1>
+          <h1 class="profile-name">Raviteja</h1>
           <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
           </div>
         </div>
@@ -51,7 +51,7 @@
 and my department is Computational Intelligence. I'll be graduating from VIT University in 2021 with a degree in Artificial Inteliigence and Machine Learning.
 </p>
 
-<p> Here is my work on Natural Language Processing which include basic to moderate level of code written to uderstand corpus and oparations on it.
+<p> Here is my work on Natural Language Processing which include basic to moderate level of code written to understand corpus and oparations on it.
 </p>
 
 <h2 id="contact-me">Contact Me</h2>
