--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="content">
-          <h1 id="hello">Hello!</h1>
+          <h1 id="hello">Hi there!</h1>
 
 <p>I’m Raviteja, a Master's student at VIT University from <a href="https://vit.ac.in/schools/scope">School of Computer Science and Engineering</a>
 and my department is Computational Intelligence. I'll be graduating from VIT University in 2021 with a degree in Artificial Inteliigence and Machine Learning.
@@ -57,7 +57,7 @@ and my department is Computational Intelligence. I'll be graduating from VIT Uni
 <h2 id="contact-me">Contact Me</h2>
 
 <ul>
-  <li>You can reach me at <a href="gmail:sanaraviteja10@gmail.com">sanaraviteja10@gmail.com</a>.</li>
+  <li>You can reach me at <a href="mailto:sanaraviteja10@gmail.com">sanaraviteja10@gmail.com</a>.</li>
 </ul>
 
 <h2 id="links">Links</h2>
