--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="content">
-          <h1 id="hello">Hithere:)</h1>
+          <h1>Hithere:)</h1>
 
 <p>I’m Raviteja, a Master's student at VIT University from <a href="https://vit.ac.in/schools/scope">School of Computer Science and Engineering</a>
 and my department is Computational Intelligence. I'll be graduating from VIT University in 2021 with a degree in Artificial Inteliigence and Machine Learning.
