--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1>Hithere:)</h1>
 
 <p>I’m Raviteja, a Master's student at VIT University from <a href="https://vit.ac.in/schools/scope">School of Computer Science and Engineering</a>
-and my department is Computational Intelligence. I'll be graduating from VIT University in 2021 with a degree in Artificial Inteliigence and Machine Learning.
+specialisation in Artificial Inteliigence and Machine Learning belonging to the batch 2019-2021. 
 </p>
 
 <p> Here is my work on Natural Language Processing which include basic to moderate level of code written to understand corpus and oparations on it.
