--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="content">
-          <h1>Hithere:)</h1>
+          <h1 id="Hi-there:)">Hi there:)</h1>
 
 <p> I’m Raviteja, a Master's student at VIT University from <a href="https://vit.ac.in/schools/scope">School of Computer Science and Engineering</a>
 specialisation in Artificial Inteliigence and Machine Learning belonging to the batch 2019-2021.
