--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="header">
+            <head>
+              <link rel="stylesheet" type="text/css" href="mystyle.css">
+            </head>
           <h1 class="profile-name">Raviteja</h1>
           <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
           </div>
