--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             <head>
               <link rel="stylesheet" type="text/css" href="mystyle.css">
             </head>
+            body {
+               background-color: lightblue;
+}
+
+h1 {
+  color: navy;
+  margin-left: 20px;
+}
           <h1 class="profile-name">Raviteja</h1>
           <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
           </div>
