--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         font-family: 'Lato', sans-serif;
         font-size: 16px;
     }
+      <body style="background-color:grey;">
     .header {
         text-align: center;
     }
