--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         font-family: 'Lato', sans-serif;
         font-size: 16px;
     }
-      <body style="background-color:grey;">
+      
     .header {
         text-align: center;
     }
@@ -36,7 +36,7 @@
     }
 </style>
 
-<body>
+<body style="background-color:powderblue;">
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="header">
