--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     h1 {
         font-size: 28px;
     }
+    <body style="background-color:#FF0000;">
+    </body>
 </style>
 
-<body style="background-color:powderblue;">
+<body>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="header">
