--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     h1 {
         font-size: 28px;
     }
-    <body style="background-color:#FF0000;">
+    <body style="background-color:rgb(255,0,0);">
     </body>
 </style>
 
