--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     h1 {
         font-size: 28px;
     }
-    <body style="background-color:rgba(255,0,0,0.5);"></body> 
-    
+    <body style="background-color:rgba(255,0,0,0.5);">
+    background-color: #d24dff
+    </body>
 </style>
 
 <body>
