--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     h1 {
         font-size: 28px;
     }
-    <body style="background-color:rgba(255,0,0,0.5);">
+    body{
     background-color: #d24dff
-    </body>
+    }
+    
 </style>
 
 <body>
