--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     h1 {
         font-size: 28px;
     }
-    body{
-    background-color: #d24dff
-    }
+    <body style="background-color:rgba(255,0,0,0.5);">
+</body>
+    
     
 </style>
 
