--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     h1 {
         font-size: 28px;
     }
-    <body style="background-color:rgba(255,0,0,0.5);">
-</body>
-    
+    <body style="background-color:hsla(0,100%,50%,0.5);">
+    </body>
     
 </style>
 
